Update model for handling copies of published NodeSets.
